--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -4,13 +4,19 @@
         <title>TechShop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+
+
+        <header>
+            <h1>Ejemplo 3</h1>
+        </header>
 
         <a href="ejemplo2.html">Back</a> 
         <a href="index.html">Home</a>
         <a href="ejemplo4.html">Next</a>
-        <h1 style="text-align:  center;background-color:  black;color:  deeppink"> Ejemplo 3</h1>
+        
         <p>Esta es la primera pagina del curso WEB y Patrones</p>
         <hr>
         <h2>Uso de bloques</h2>
