--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,18 +4,66 @@
         <title>TechShop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo5.html">Back</a> 
-        <a href="index.html">Home</a>
-        <a href="ejemplo2.html">Next</a>
-        <h1 style="text-align:  center;background-color:  black;color:  deeppink"> Pagina Principal</h1>
-        <p>Esta es la primera pagina del curso WEB y Patrones</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
+        <header> 
+            <h1>Pagina Principal</h1>
+        </header>
+        <nav>
+            <a href="ejemplo5.html">Back</a> 
+            <a href="index.html">Home</a>
+            <a href="ejemplo2.html">Next</a>
+        </nav>
+        <aside id="aviso">
+            <h2>
+                La promo del dia
+            </h2>
+            <p>Esta es la primera pagina del curso WEB y Patrones</p>
+        </aside>
 
-        <p style="text-align:  center">Eget curae ridiculus condimentum habitasse massa aliquam lacus curabitur, tempus imperdiet aliquet nascetur convallis nunc accumsan sociosqu, senectus vestibulum mus inceptos leo luctus proin. Ut vehicula ante tristique ultricies eleifend donec, sollicitudin tincidunt rhoncus massa non, mollis at congue tempus laoreet. Consequat mi mattis tellus morbi felis lacus elementum est, ullamcorper sociosqu tortor rhoncus torquent sem justo fringilla suscipit, interdum inceptos per arcu blandit donec litora. Ligula dignissim habitasse id venenatis arcu euismod aptent natoque ultricies massa maecenas non, tortor velit enim felis donec class morbi primis nostra egestas in pellentesque netus, etiam ornare scelerisque pulvinar libero porta placerat nisl convallis nibh litora</p>
+        <section>
+            <h2>Nuetros productos</h2>
+            <article>
+                <header>
+                    <h2>Producto 001</h2>
+                </header>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
+                <figure>
+                    <img src="img/leon.jpg" alt="" width="75"/>
+                    <figcaption>$25.000.00</figcaption>
+                </figure>
+                <footer>
+                    <a href="#">Comprar ahora...<a/>
+                </footer>
+            </article>
 
-        <p style="text-align:  right;">Est praesent posuere velit vel gravida placerat scelerisque porttitor, pulvinar class parturient malesuada phasellus luctus lacus. Nullam aenean tristique hac facilisis class inceptos turpis tempor, ridiculus aptent donec maecenas vitae eu posuere urna felis, justo nam commodo arcu dis imperdiet cubilia. Justo est facilisi sapien aptent nisl dictumst dictum, tempus scelerisque molestie vitae penatibus ante, sagittis sollicitudin lectus vulputate hendrerit turpis. Nec turpis facilisi penatibus nam tempus cras, nulla praesent suscipit tortor inceptos lectus pharetra, a in blandit neque sodales</p>
+            <article>
+                <header>
+                    <h2>Producto 003</h2>
+                </header>
+                <p class="producto">Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
+                <figure>
+                    <img src="img/leon.jpg" alt="" width="75"/>
+                    <figcaption>$25.000.00</figcaption>
+                </figure>
+                <footer>
+                    <a href="#">Comprar ahora...<a/>
+                </footer>
+            </article>
 
+            <article>
+                <header>
+                    <h2>Producto 004</h2>
+                </header>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
+                <figure>
+                    <img src="img/leon.jpg" alt="" width="75"/>
+                    <figcaption>$25.000.00</figcaption>
+                </figure>
+                <footer>
+                    <a href="#">Comprar ahora...<a/>
+                </footer>
+            </article>
     </body>
 </html>
