Semana 3, proyecto inicial del curso Miercoles 2022

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,69 +1,25 @@
-
 <html>
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <header> 
-            <h1>Pagina Principal</h1>
+        <header class="header">            
+            <nav class="nav">
+                <a href="index.html" class="nav-link logo">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo5.html">&LeftTriangleBar;</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">&RightTriangleBar;</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audios.html">Audios</a></li>                   
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="videos.html">Vídeos</a></li>                    
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">iFrame</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="formulario.html">Form</a></li>
+                </ul>  
+            </nav>
         </header>
-        <nav>
-            <a href="ejemplo5.html">Back</a> 
-            <a href="index.html">Home</a>
-            <a href="ejemplo2.html">Next</a>
-        </nav>
-        <aside id="aviso">
-            <h2>
-                La promo del dia
-            </h2>
-            <p>Esta es la primera pagina del curso WEB y Patrones</p>
-        </aside>
-
-        <section>
-            <h2>Nuetros productos</h2>
-            <article>
-                <header>
-                    <h2>Producto 001</h2>
-                </header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
-                <figure>
-                    <img src="img/leon.jpg" alt="" width="75"/>
-                    <figcaption>$25.000.00</figcaption>
-                </figure>
-                <footer>
-                    <a href="#">Comprar ahora...<a/>
-                </footer>
-            </article>
-
-            <article>
-                <header>
-                    <h2>Producto 003</h2>
-                </header>
-                <p class="producto">Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
-                <figure>
-                    <img src="img/leon.jpg" alt="" width="75"/>
-                    <figcaption>$25.000.00</figcaption>
-                </figure>
-                <footer>
-                    <a href="#">Comprar ahora...<a/>
-                </footer>
-            </article>
-
-            <article>
-                <header>
-                    <h2>Producto 004</h2>
-                </header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit class, auctor erat suspendisse sapien nascetur pellentesque platea condimentum, tristique scelerisque commodo molestie habitant lacus lacinia. Suscipit consequat libero sed hac urna iaculis posuere eleifend sagittis, eget nisl purus taciti platea fames fusce nullam. Praesent vestibulum torquent ridiculus convallis per mollis tortor rutrum sociis, sem urna consequat odio porttitor facilisi nostra dui, class fusce ultricies donec dis quisque conubia semper</p>
-                <figure>
-                    <img src="img/leon.jpg" alt="" width="75"/>
-                    <figcaption>$25.000.00</figcaption>
-                </figure>
-                <footer>
-                    <a href="#">Comprar ahora...<a/>
-                </footer>
-            </article>
+        <footer>
+            <h3>Sitio web desarrollado en el IIIC 2022 &copy</h3>
+        </footer>
     </body>
 </html>
