Semana 4, Gary Gomez Torres

--- a/src/main/resources/static/videos.html
+++ b/src/main/resources/static/videos.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/menu.css" rel="stylesheet" type="text/css"/>
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header class='header'> 
@@ -31,6 +32,7 @@
                         Your browser does not support the <code>video</code> tag.
                     </video>
                 </figure>
-
+            </article>
+        </section>
                 </body>
                 </html>
