--- a/src/main/resources/static/index_anterior.html
+++ b/src/main/resources/static/index_anterior.html
@@ -5,6 +5,12 @@
         <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <div class="buscador-producto">
+            <label for="buscador">Buscar producto</label>
+            <input type="buscador" id="buscador">
+
+        </div>
+
         <header class="header">            
             <nav class="nav">
                 <a href="index.html" class="nav-link logo">TechShop</a>
